objects/DMAPP__DM_Quicklink__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG

This object is responsible for the maintenance of the Quicklinks to be used by Assessment, Coach and Qualifiers</description>
    <fields>
        <fullName>DMAPP__DM_Coach_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DM Coach Rule</label>
        <referenceTo>DMAPP__DM_Coach_Rule__c</referenceTo>
        <relationshipLabel>Quicklinks</relationshipLabel>
        <relationshipName>DM_Quicklinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_TAS_Criterion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Criterion</label>
        <referenceTo>DMAPP__DM_TAS_Criterion__c</referenceTo>
        <relationshipLabel>Quicklinks</relationshipLabel>
        <relationshipName>DM_Quicklinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Description__c</fullName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DMAPP__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quicklink</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Type__c</columns>
        <columns>DMAPP__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Quicklink Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quicklinks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>